--- a/src/assets/style/_reset.scss
+++ b/src/assets/style/_reset.scss
@@ -2,6 +2,13 @@
 
 html {
     height: 100%;
+    font-family: -apple-system, BlinkMacSystemFont,
+                 "Helvetica Neue", "Segoe UI", "Roboto",
+                 "PingFang SC", "Hiragino Sans GB",
+                 "Microsoft YaHei Light", "Microsoft YaHei",
+                 "Noto Sans CJK",
+                 "WenQuanYi Micro Hei",
+                 sans-serif;
 }
 
 body {
