modify: 使用 css-flex 替换 scss-flex

--- a/src/components/NavBar/style.scss
+++ b/src/components/NavBar/style.scss
@@ -1,4 +1,4 @@
-@import '~@nn-yy/scss-flex';
+@import '~@nn-yy/css-flex/flex';
 
 .nav-bar {
   @include flex( between, middle );
@@ -9,7 +9,7 @@
 
   &__helper {
     @include flex( center, middle );
-    @include flex-self( auto, none );
+    @include flex-self( keep );
     width: unset;
 
     i {
