refactor(style): 调整样式目录结构

--- a/src/themes/element-ui/_iconfont.scss
+++ b/src/themes/element-ui/_iconfont.scss
@@ -2,8 +2,8 @@
 
 @font-face {
   font-family: "iconfont";
-  src: url('~@/assets/fonts/iconfont.eot?t=1526904329329'); /* IE9*/
-  src: url('~@/assets/fonts/iconfont.ttf?t=1526904329329') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  src: url('./fonts/iconfont.eot?t=1526904329329'); /* IE9*/
+  src: url('./fonts/iconfont.ttf?t=1526904329329') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
 }
 
 i[class^="el-icon-icon"], i[class*=" el-icon-icon"] {
