--- a/src/themes/element-ui/theme.scss
+++ b/src/themes/element-ui/theme.scss
@@ -7,7 +7,6 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
 @import "~element-ui/packages/theme-chalk/src/index";
 
-// reset el-card component
-.el-card {
-  margin-bottom: 20px; 
-}
+@import "./iconfont.scss";
+
+@import "./reset.scss";
