--- a/src/assets/element-ui/theme.scss
+++ b/src/assets/element-ui/theme.scss
@@ -7,6 +7,8 @@ $--font-path: '~element-ui/lib/theme-chalk/fonts';
 
 @import "~element-ui/packages/theme-chalk/src/index";
 
+@import '~element-ui/lib/theme-chalk/display.css';
+
 @import "./iconfont.scss";
 
 @import "./reset.scss";
