fix: 修复移动端组件样式错误

--- a/src/libs/element-ui/_reset.scss
+++ b/src/libs/element-ui/_reset.scss
@@ -1,5 +1,4 @@
 @charset "UTF-8";
-@import '~@nn-yy/css-flex/flex';
 
 // reset global style
 html {
@@ -32,14 +31,13 @@ body {
 .el-date-range-picker {
   @media screen and (max-width: 769px) {
     width: 320px;
-      /deep/ {
-      .el-picker-panel__body {
-        @include flex-column();
-        min-width: unset;
+    
+    .el-picker-panel__body {
+      flex-direction: column;
+      min-width: unset;
 
-        .el-picker-panel__content {
-          width: 320px;
-        }
+      .el-picker-panel__content {
+        width: 320px;
       }
     }
   }
